--- a/.github/workflows/aio-cli.yml
+++ b/.github/workflows/aio-cli.yml
@@ -8,6 +8,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Set Node.js 16 as Unsecure Version
+      env:
+        ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+      run: echo "Node.js 16 will be used"
+
     - name: Checkout code
       uses: actions/checkout@v4
 
