--- a/.github/workflows/aio-cli.yml
+++ b/.github/workflows/aio-cli.yml
@@ -30,4 +30,7 @@ jobs:
         AIO_RUNTIME_NAMESPACE: ${{ secrets.AIO_RUNTIME_NAMESPACE }}
         AIO_RUNTIME_APIHOST: ${{ secrets.AIO_RUNTIME_APIHOST || 'https://adobeioruntime.net' }}
       run: |
+        echo "AIO_RUNTIME_AUTH: $AIO_RUNTIME_AUTH"
+        echo "AIO_RUNTIME_NAMESPACE: $AIO_RUNTIME_NAMESPACE"
+        echo "AIO_RUNTIME_APIHOST: $AIO_RUNTIME_APIHOST"
         aio rt property get --all # Replace with your desired AIO-CLI command
